Minor layout update

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,10 +24,10 @@
 }
 
 .version-box {
-    font-size: 18px;
+    font-size: 14px;
     line-height: 30px;
     margin-bottom: 0;
-    float: right;
+    float: left;
     clear: both;
 }
 
