--- a/_layouts/versions.html
+++ b/_layouts/versions.html
@@ -10,6 +10,9 @@
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
+        <ul>
+          {% include versions.html %}
+        </ul>
       </div>
     </div>
 
