--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -68,6 +68,14 @@ html {
   }
 }
 
+.version-bar {
+  position: fixed;
+  z-index: 10;
+  background-color: #f0f0f0;
+  width: 100%;
+  padding: 5px;
+}
+
 /* Sidebar links */
 .sidebar a {
   color: #a33;
